kubi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia
  labels:
    app: kubia
    env: prod
    create_method: manual
spec:
  nodeSelector:
    gpu: "true"
  containers:
    - name: kubia
      image: luksa/kubia
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
          protocol: TCP
      livenessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 10
