dnsa.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-dnsa
spec:
  clusterIP: None
  selector:
    app: kubia
  ports:
    - port: 80
      targetPort: 8080
