endpoint.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: external-service
# spec:
#   ports:
#     - port: 80

---

apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
    - ip: 11.11.11.11
    - ip: 22.22.22.22
    ports:
    - port: 80


---

apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: someapi.somecommpany.com
  ports:
    - port: 80
