nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
spec:
  selector:
    app: kubia
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080

---

apiVersion: v1
kind: Service
metadata: 
  name: my-loader-balance
spec:
  type: LoadBalancer
  selector:
    app: kubia
  ports:
    - port: 80
      targetPort: 8080
